--- a/styling.css
+++ b/styling.css
@@ -44,25 +44,17 @@ hr {
 
 .toggle-icon {
     font-size: 2rem;
-    /* Justera storlek efter behov */
     cursor: pointer;
     user-select: none;
-    /* Förhindra att texten markeras vid klick */
     transition: transform 0.3s ease;
-    /* Lägg till en enkel animation för klick */
 }
 
-
-/* Alla toggle-checkboxar som är markerade */
 input[type="checkbox"]:checked+label .toggle-icon::before {
     content: "−";
-    /* Visar minus när aktiv */
 }
 
-/* Alla toggle-checkboxar som inte är markerade */
 input[type="checkbox"]:not(:checked)+label .toggle-icon::before {
     content: "+";
-    /* Visar plus när inaktiv */
 }
 
 .content-container {
@@ -72,13 +64,13 @@ input[type="checkbox"]:not(:checked)+label .toggle-icon::before {
     opacity: 0;
 }
 
-input[type="checkbox"]:not(:checked)+label+.content-container {
+input[type="checkbox"]:checked+label+.content-container {
     animation: grow 1.3s ease-in-out forwards, fadeIn 1s 0.5s forwards;
 }
-/* 
+
 input[type="checkbox"]:not(:checked)+label+.content-container {
     animation: fadeOut 0.5s forwards, shrink 1s ease-in-out forwards;
-} */
+}
 
 @keyframes grow {
     0% {
@@ -87,8 +79,7 @@ input[type="checkbox"]:not(:checked)+label+.content-container {
     }
 
     100% {
-        max-height: 2000px;
-        /* Anpassa efter ditt behov */
+        max-height: 2000px; /* Better set it big, just in case for the mobil view when everything stack on top of another! */
         margin-top: 0.7rem;
     }
 }
@@ -157,8 +148,6 @@ input[type="checkbox"]:not(:checked)+label+.content-container {
 
 
 .progress-bar-wrapper {
-    margin-top: 0.55rem;
-    /* To make the text beguin at se same height as the left side*/
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -175,9 +164,7 @@ input[type="checkbox"]:not(:checked)+label+.content-container {
 }
 
 .progress-bar-section {
-    /* border: solid 1px red; */
     height: 100%;
-
 }
 
 
@@ -256,13 +243,11 @@ input[type="checkbox"]:not(:checked)+label+.content-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* border: solid 1px blue; */
 }
 
 .section-two-container .content-container-right {
     display: flex;
     flex-direction: column;
-    /* border: 1px solid red; */
 }
 
 .header-with-text {
@@ -270,7 +255,6 @@ input[type="checkbox"]:not(:checked)+label+.content-container {
     display: flex;
     flex-direction: column;
     gap: 0.2rem;
-
 }
 
 .header-with-text p {
@@ -295,8 +279,6 @@ input[type="checkbox"]:not(:checked)+label+.content-container {
     width: 50%;
     padding: 0 2rem;
 }
-
-
 
 .section-three-container .content-container-right {
     border: solid 1px red;
@@ -327,7 +309,7 @@ input[type="checkbox"]:not(:checked)+label+.content-container {
 
 /* *********************************STYLES FOR DIFFERENT DEVICES************************************ */
 
-/* Default för mobiler (0px - 767px) */
+/* FOR PHONE */
 @media (max-width: 767px) {
     .section-one-container {
         border: solid 1px solid red;
@@ -349,8 +331,6 @@ input[type="checkbox"]:not(:checked)+label+.content-container {
         width: 35%;
     }
 
-
-
     .section-one-container .content-container-right {
         width: 100%;
     }
@@ -362,15 +342,30 @@ input[type="checkbox"]:not(:checked)+label+.content-container {
     .section-two-container {
         display: flex;
         flex-direction: column;
+    }   
+
+    .section-three-container .content-container-row {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        width: 100%;
     }
 
+    .section-three-container .row-left,
+    .section-three-container .row-right {
+        width: 100%;
+        padding: 0;
+    }
+
+    .section-four-container .content-container-row {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
 
 }
 
-/* För surfplattor (768px - 1023px) */
-@media (min-width: 768px) and (max-width: 1023px) {}
-
-/* För desktops (1024px och uppåt) */
+/* FOR DESKTOP */
 @media (min-width: 1024px) {
     .wrapper {
         width: 70vw;
